# Chronos

./: .clang-format  .gitignore  .gitmodules  APIUsage_8md.html  CMakeLists.txt  ChronosDoc  ColoredRectangle_8cpp.html  ColoredRectangle_8cpp__incl.map  ColoredRectangle_8cpp__incl.md5  ColoredRectangle_8cpp_source.html  ColoredRectangle_8hpp.html  ColoredRectangle_8hpp.js  ColoredRectangle_8hpp__dep__incl.map  ColoredRectangle_8hpp__dep__incl.md5  ColoredRectangle_8hpp__incl.map  ColoredRectangle_8hpp__incl.md5  ColoredRectangle_8hpp_source.html  Contributing.html  Contributing_8md.html  Examples.html  Examples_8md.html  Filing.html  FilingIssues_8md.html  How.html  LICENSE  Libraries.html  LibrariesUsed_8md.html  README.md  README_8md.html  TexturedRectangle_8cpp.html  TexturedRectangle_8cpp__incl.map  TexturedRectangle_8cpp__incl.md5  TexturedRectangle_8cpp_source.html  TexturedRectangle_8hpp.html  TexturedRectangle_8hpp.js  TexturedRectangle_8hpp__dep__incl.map  TexturedRectangle_8hpp__dep__incl.md5  TexturedRectangle_8hpp__incl.map  TexturedRectangle_8hpp__incl.md5  TexturedRectangle_8hpp_source.html  (+1346 more)
.github/ISSUE_TEMPLATE/: bug-report-for-api.md  documentation-error.md  editor-bug-report.md  feature-request-for-api.md  feature-request-for-editor.md
.github/workflows/: buildAndTest.yml  cmake-multi-platform.yml  main.yml
Assets/: generateFontInclude.py
Python/: anim.py  anim2.py  imageOutline.cpp  plotCurves.ipynb
Shaders/: CMakeLists.txt  colorShader.frag  colorShader.vert  compile.bat  compile.sh  text.vert  textFrag.frag  textVert.spv  textureVert.vert
Shaders/Fragment/: colorShader.frag  text.frag
Shaders/SPIV/: colorFrag.spv  colorVert.spv  textFrag.spv  textVert.spv  textureVert.spv
Shaders/Vertex/: text.vert  textureShader.vert
Shaders/mesh/: textureRectangle.mesh  textureTriangle.mesh
Source/: CMakeLists.txt
Source/API/: CMakeLists.txt  manager.cpp  managerAnimationFunctions.cpp  managerShapeFunctions.cpp  managerTextFunctions.cpp  managerTextureFunctions.cpp
Source/API/Source/: manager.cpp  managerShapeFunctions.cpp  managerTextFunctions.cpp  managerTextureFunctions.cpp
Source/API/Tests/: generalTests.cpp  shapeTests.cpp  textTests.cpp
Source/Animation/: CMakeLists.txt  animBone.cpp  animBone.hpp  animKeyframeVariable.cpp  animKeyframeVariable.hpp  animManager.cpp  animManager.hpp  animRig.cpp  animRig.hpp
Source/Animation/Headers/: animBezierFunctions.hpp  animBone.hpp  animComposite.hpp  animData.hpp  animFileParser.hpp  animKeyframeVariable.hpp  animManager.hpp  animObject.hpp  animParams.hpp  animRig.hpp  animShape.hpp  animSkeleton.hpp  animTree.hpp
Source/Animation/Source/: animBezierFunctions.cpp  animBone.cpp  animComposite.cpp  animFileParser.cpp  animKeyframeVariable.cpp  animManager.cpp  animObject.cpp  animRig.cpp  animShape.cpp  animSkeleton.cpp  animTree.cpp
Source/Common/: CMakeLists.txt  commonStructs.hpp  featureMacros.hpp  logging.hpp  stlheader.hpp
Source/Common/Headers/: commonStructs.hpp  logging.hpp  stlheader.hpp
Source/Common/Tests/: main.cpp
Source/Editor/: CMakeLists.txt  editorCodeGenerator.cpp  editorCodeGenerator.hpp  editorMain.cpp  editorManager.cpp  editorManager.hpp  editorRenderer.cpp  editorRenderer.hpp  editorTheme.hpp
Source/Editor/Headers/: editorCodeGenerator.hpp  editorElements.hpp  editorHeaders.hpp  editorManager.hpp  editorRenderer.hpp  editorTheme.hpp  gui.hpp  guiHeaders.hpp
Source/Editor/Source/: editorCodeGenerator.cpp  editorElements.cpp  editorMain.cpp  editorManager.cpp  editorRenderer.cpp  editorTheme.cpp  gui.cpp
Source/Engine/: CMakeLists.txt  Vertex.hpp  engine.cpp  engine.hpp  getFontType.cpp  getFontType.hpp  shape.hpp  shapeManager.hpp  textureManager.hpp  validation.hpp
Source/Engine/Headers/: Vertex.hpp  buffers.hpp  device.hpp  engine.hpp  engineStructs.hpp  font.hpp  fontTypes.hpp  getFontType.hpp  helper.hpp  multiFontInclude.hpp  object.hpp  objectManager.hpp  objectManagerDefs.hpp  polygon.hpp  polygonManager.hpp  shape.hpp  shapeManager.hpp  structs.hpp  swapchain.hpp  text.hpp  textManager.hpp  texture.hpp  textureManager.hpp  validation.hpp  vulkanHeaders.hpp
Source/Engine/Objects/: object.hpp  polygon.hpp  polygonManager.cpp
Source/Engine/Source/: buffers.cpp  device.cpp  engine.cpp  font.cpp  getFontType.cpp  helper.cpp  object.cpp  polygon.cpp  polygonManager.cpp  shape.cpp  shapeManager.cpp  swapchain.cpp  text.cpp  textManager.cpp  texture.cpp  textureManager.cpp  validation.cpp
Source/Engine/Templates/: objectManagerDefs.tpp  shapeDefs.tpp  shapeManagerDefs.tpp
Source/Engine/Tests/: engineTests.cpp  helperTests.cpp  shapeManagerTests.cpp  textManagerTests.cpp
Source/Rendering/: buffers.cpp  buffers.hpp  device.cpp  device.hpp  engine.cpp  engine.hpp  engineStructs.hpp  helper.cpp  helper.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  textureManager.cpp  textureManager.hpp  validation.cpp  validation.hpp
Source/Rendering/Objects/: CMakeLists.txt  Vertex.hpp  object.cpp  object.hpp  objectManager.cpp  objectManager.hpp  objectTypes.hpp  polygon.cpp
Source/Rendering/Objects/Freetype/: CMakeLists.txt
Source/Rendering/Objects/Rectangle/: CMakeLists.txt  ColoredRectangle.cpp  ColoredRectangle.hpp  TexturedRectangle.cpp  TexturedRectangle.hpp
Source/Rendering/Objects/Text/: CMakeLists.txt  fontTypes.hpp  getFontType.cpp  getFontType.hpp  text.cpp  text.hpp  textManager.cpp
cmake/: FormatClang.cmake
docs/: APIUsage.md  Contributing.md  Examples.md  FilingIssues.md  LibrariesUsed.md  Usage.md  UsingEditor.md  Working.md  build.md
include/: chronos.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+83 more)
