option(CHRONOS_ENABLE_ERROR_LOGGING "Enable Error logging(level 1)" OFF)
option(CHRONOS_ENABLE_BASIC_LOGGING "Enable Basic logging(level 2)" OFF)
option(CHRONOS_ENABLE_VERBOSE_LOGGING "Enable Verbose logging(level 3)" OFF)
option(CHRONOS_ENABLE_EXTREME_LOGGING "Enable Extreme logging(level 4)" OFF)
option(CHRONOS_ENABLE_PROFILING "Enable profiling" OFF)

if(CHRONOS_ENABLE_EXTREME_LOGGING)
    target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=4)
    if(CHRONOS_BUILD_EDITOR)
        target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=4)
    endif()
    message(STATUS "Extreme logging enabled(level 4)")
elseif(CHRONOS_ENABLE_VERBOSE_LOGGING)
    target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=3)
    if(CHRONOS_BUILD_EDITOR)
        target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=3)
    endif()
    message(STATUS "Verbose logging enabled(level 3)")
elseif(CHRONOS_ENABLE_BASIC_LOGGING)
    target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=2)
    if(CHRONOS_BUILD_EDITOR)
        target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=2)
    endif()
    message(STATUS "Basic logging enabled(level 2)")
elseif(CHRONOS_ENABLE_ERROR_LOGGING)
    target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=1)
    if(CHRONOS_BUILD_EDITOR)
        target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=1)
    endif()
    message(STATUS "Error logging enabled(level 1)")
else()
    target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=0)
    if(CHRONOS_BUILD_EDITOR)
        target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=0)           
    endif()
    message(STATUS "Logging disabled(level 0)")
endif()

target_include_directories(Chronos PUBLIC .)
if(CHRONOS_BUILD_EDITOR)
    target_include_directories(ChronosEditor PUBLIC .)
endif()